--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Script Geral -->
     <script src="js/script.js" defer></script>
-    <title>Codificador - Decodificador</title>
+    <title>Decodificador de Mensagem</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
  
    <main class="main">
     <section>
-     <textarea class="input-texto" cols="40" rows="9" placeholder="Digite seu texto..." ></textarea>
+     <textarea class="input-texto" cols="40" rows="9" placeholder="Digite sua mensagem..." ></textarea>
       <div class="information"> 
        <ul class="mensagens-erro">
        </ul>
