mudança no titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Codificador e decodificador de texto.
+    <meta name="description" content="Decodificador de Texto.
         (Oracle Next Education) desenvolvido para aprimorar os conhecimentos em lógica de programação, HTML, CSS e JavaScript.">
     <link rel="icon" href="img/dados-criptografados.png" type="">
 
@@ -19,7 +19,7 @@
 
     <!-- Script Geral -->
     <script src="js/script.js" defer></script>
-    <title>Decodificador de Mensagem</title>
+    <title>Decodificador de Texto</title>
 </head>
 
 <body>
