--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  
    <main class="main">
     <section>
-     <textarea class="input-texto" cols="40" rows="9" placeholder="Digite sua mensagem..." ></textarea>
+     <textarea class="input-texto" cols="40" rows="9" placeholder="Digite sua mensagem aqui...(use letras minusculas sem acento)"></textarea>
       <div class="information"> 
        <ul class="mensagens-erro">
        </ul>
